syntax = "proto3";

package demo;

service DemoService {
  rpc UnaryHello (HelloRequest) returns (HelloResponse);
  rpc ServerStreamHello (HelloRequest) returns (stream HelloResponse);
  rpc ClientStreamHello (stream HelloRequest) returns (HelloResponse);
  rpc BidiHello (stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
